# nudge

./: .gitignore  .gitlab-ci.yml  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  mise.toml  rust-toolchain.toml  wrangler.jsonc
.github/workflows/: ci.yml  release.yml
android/: .gitignore  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/io/gitlab/hongtao1207/nudge/app/: AndroidSodium.kt  ChatScreen.kt  ChatViewModel.kt  MainActivity.kt  Markdown.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/protocol/: build.gradle.kts
android/protocol/src/main/kotlin/io/gitlab/hongtao1207/nudge/protocol/: Client.kt  Crypto.kt  Frames.kt  Pairing.kt  SmokeMain.kt
android/protocol/src/test/kotlin/io/gitlab/hongtao1207/nudge/protocol/: CryptoInteropTest.kt  CryptoTest.kt  FramesTest.kt  PairingTest.kt
deploy/: Caddyfile  README.md  relay.service
docs/: README.md  getting-started.md  mcp.md  mobile-app.md  remote-and-relay.md  roadmap.md  security.md  skills.md  subagents.md  symmetric-communication.md  terminal-agent.md
relay/: Cargo.toml
relay/src/: main.rs
site/: .gitignore  config.toml
site/content/: _index.md  an-agent-is-just-another-client.md  drive-a-coding-agent-from-your-phone.md  i-didnt-build-an-auto-mode.md
site/templates/: base.html  index.html  page.html
src/: cli.rs  config.rs  main.rs  models.rs  sessions.rs  spawn.rs
src/coding/: backend.rs  context.rs  file_state.rs  mod.rs  prompt.rs
src/coding/mcp/: catalog.rs  mod.rs  oauth.rs
src/coding/skills/: mod.rs
src/coding/tools/: bash.rs  create_new.rs  edit.rs  glob.rs  grep.rs  mod.rs  read.rs  todo_write.rs
src/core/: agent.rs  events.rs  host.rs  identity.rs  mod.rs  peer.rs  session.rs
src/core/agent/: dispatch.rs  mod.rs  naming.rs  peer_tools.rs  session_info.rs  steering.rs  supervision.rs  tests.rs  types.rs
src/llm/: anthropic.rs  mod.rs
src/run/: connect.rs  daemon.rs  local.rs  mod.rs
src/transport/: client.rs  daemon.rs  encryption.rs  mod.rs  pairing.rs  tests.rs  wire.rs
src/tui/: app.rs  event.rs  input.rs  markdown.rs  mod.rs  render.rs  run.rs  text.rs
