[package]
name = "nudge"
version = "0.1.0"
edition = "2024"
description = "A Claude-Code-style coding agent for your terminal, written in Rust from scratch."
license = "MIT"
readme = "README.md"
repository = "https://gitlab.com/hongtao1207/nudge"
keywords = ["agent", "llm", "claude", "tui", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "nudge"
path = "src/main.rs"

# The ciphertext-blind WebSocket relay (Phase 8.2): the publicly-reachable box
# both peers dial out to. Shares no code with the agent, so it's a standalone bin.
[[bin]]
name = "relay"
path = "src/bin/relay.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs", "io-util", "sync", "net", "signal"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dotenvy = "0.15"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
pulldown-cmark = { version = "0.13", default-features = false }
rmcp = { version = "1.7.0", default-features = false, features = ["client", "transport-child-process", "transport-streamable-http-client-reqwest", "auth"] }
async-trait = "0.1.89"
# rustls (matching reqwest) so the relay client can dial wss://; webpki-roots
# bundles the trust store, keeping the binary free of an OS cert dependency.
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
dryoc = "0.7"
clap = { version = "4", features = ["derive"] }
# default features pull in the `image` crate for raster rendering; we only render
# the unicode terminal QR, so drop them to keep the dependency tree lean.
qrcode = { version = "0.14", default-features = false }
base64 = "0.22"
