[workspace]
members = ["relay"]
resolver = "3"

# Shared deps declared once so root + relay resolve a single version. Bump here
# and both crates follow; per-crate features are added at the use site.
[workspace.dependencies]
anyhow = "1"
futures = "0.3"
clap = { version = "4", features = ["derive"] }
tokio-tungstenite = "0.24"

[package]
name = "nudge"
version = "0.1.0"
edition = "2024"
description = "A coding agent for your terminal and on the go, written in Rust from scratch."
license = "MIT"
readme = "README.md"
repository = "https://gitlab.com/hongtao1207/nudge"
keywords = ["agent", "llm", "claude", "tui", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "nudge"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs", "io-util", "sync", "net", "signal"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
anyhow = { workspace = true }
dotenvy = "0.15"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
crossterm = { version = "0.28", features = ["event-stream"] }
futures = { workspace = true }
pulldown-cmark = { version = "0.13", default-features = false }
rmcp = { version = "1.7.0", default-features = false, features = ["client", "transport-child-process", "transport-streamable-http-client-reqwest", "auth"] }
async-trait = "0.1.89"
# rustls (matching reqwest) so the relay client can dial wss://; webpki-roots
# bundles the trust store, keeping the binary free of an OS cert dependency.
tokio-tungstenite = { workspace = true, features = ["rustls-tls-webpki-roots"] }
dryoc = "0.7"
clap = { workspace = true }
# default features pull in the `image` crate for raster rendering; we only render
# the unicode terminal QR, so drop them to keep the dependency tree lean.
qrcode = { version = "0.14", default-features = false }
base64 = "0.22"
